2013-01-20 0.3.0 Node God as four processes, rotates log on size and time, License, ChangeLog
2013-01-14 0.2.3 one-line top-level files, nodegodweb api rewrote godmodel, apprunner 0.2.2
2013-01-12 0.2.2 refactored perioder, rotatedlogger with rename-retry
2013-01-12 0.2.1 pidlink with retry, test pass
2013-01-10 0.2.0 resilitient master process architecture change
2013-01-02 0.1.4 master using socket server. ui can now recycle with apps running
2012-12-29 0.1.3 support haraldutill 0.1.4
2012-12-25 0.1.2 refactor master process, tests
2012-12-22 0.1.1 recovery now continuous, log uses getISOPacific
2012-12-22 0.1.0 master process and ipc
2012-09-20 0.0.11 force kill printout
2012-09-14 0.0.10 top-color red on lost connection, loggin of changes only
2012-09-11 0.0.9 sigint sigusr2 better watchdelay warning coloring apprunner
2012-09-10 0.0.8 shutdown with SIGINT then kill
2012-09-03 0.0.7 Watch events update watcher files, watchCopy, haraldutil 0.1.5
2012-07-23 0.0.6: support haraldops 0.1.1
2012-07-02 0.0.5 better comms and updates
2012-06-23 0.0.4 Fixed file watchers
2012-05-27 v 0.0.1 back to express 2, sockets in appFile loading