@@ -12,7 +12,7 @@
 		"tools",
 		"operations"
 	],
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"contributors": [
 		{
 			"name": "Harald Rudell",
