@@ -1,14 +1,14 @@
 // test-appstate.js
 // © Harald Rudell 2012 MIT License
 
-var appstate = require('../lib/appstate')
+var applink = require('../lib/applink')
 
 // https://github.com/haraldrudell/mochawrapper
 var assert = require('mochawrapper')
 
 exports['AppState'] = {
 	'Exports': function () {
-		assert.exportsTest(appstate, 1)
+		assert.exportsTest(applink, 1)
 	},
 	'TODO': function () {
 	},
