@@ -1,3 +1,4 @@
+2013-01-25 0.350 Node God as four processes, rotates log on size and time, License, ChangeLog
 2013-01-20 0.3.0 Node God as four processes, rotates log on size and time, License, ChangeLog
 2013-01-14 0.2.3 one-line top-level files, nodegodweb api rewrote godmodel, apprunner 0.2.2
 2013-01-12 0.2.2 refactored perioder, rotatedlogger with rename-retry
